<resources>
    <string name="quiz_start_question">How does π start ?</string>
    <string name="quiz_question">The %s. digt of π ?</string>
    <string name="title">π</string>
    <string name="quiz">Quiz</string>
    <string name="restart">Restart</string>
    <string name="next">Next</string>
</resources>
