...
            android:text="@{piQuiz.qustionHowPiStarts ? @string/quiz_start_question : String.format(@string/quiz_question, piQuiz.digitPosition)}"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_quiz"
            tools:text="What is the 3. digit of Pi ?" />

        <TextView
            android:id="@+id/quiz_next"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:layout_alignParentBottom="true"
            android:background="@{piQuiz.buttonEnabled ? @color/blue : @color/grey}"
            android:clickable="@{piQuiz.buttonEnabled}"
            android:foreground="?selectableItemBackground"
...
